POST url verification

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Deyan Vladkov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3",    
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.5"
   }
