--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
-    "mongoose": "^4.11.5"
+    "mongoose": "^4.11.5",
+    "mongoose-sequence-plugin": "^1.0.5"
   }
 }
