--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.5",
-    "mongoose-sequence-plugin": "^1.0.5"
+    "mongoose-sequence": "^4.0.0"
   }
 }
